@@ -368,8 +368,12 @@ rdf_end_file(Cleanup) :-
 
 set_bnode_sharing(Options, erase(Ref)) :-
 	option(blank_nodes(Share), Options, noshare),
-	Share == noshare, !,
-	assert(share_blank_nodes(true), Ref).
+	(   Share == share
+	->  assert(share_blank_nodes(true), Ref)
+	;   Share == noshare
+	->  true
+	;   throw(error(domain_error(share, Share), _))
+	).
 set_bnode_sharing(_, true).
 
 set_anon_prefix(Options, erase(Ref)) :-
